// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScaleColorOptions > Render > renders default state 1`] = `
<div
  class="w-full flex flex-col gap-3"
  data-testid="ScaleColorOptions"
>
  <div
    aria-labelledby="react-aria-_r_1_"
    class="flex flex-col w-full gap-1"
    data-hover="false"
    data-orientation="horizontal"
    data-slot="base"
    id="react-aria-_r_0_"
    role="group"
  >
    <div
      class="w-full flex justify-between items-center"
      data-slot="labelWrapper"
    >
      <label
        class="flex gap-2 items-center"
        data-slot="label"
        id="react-aria-_r_1_"
      >
        <span
          class="text-base/5"
        >
          Lightness Range
        </span>
        <button
          aria-expanded="false"
          aria-label="Description for Lightness Range"
          class="inline-flex shrink-0 text-base"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
            />
          </svg>
        </button>
        <button
          aria-label="Reset Lightness Range to default"
          class="text-lg transition-colors text-secondary disabled:text-foreground-500"
          disabled=""
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
            />
          </svg>
        </button>
      </label>
      <output
        aria-live="off"
        class="flex gap-2 text-small"
        data-slot="value"
        for="react-aria-_r_1_-0 react-aria-_r_1_-1"
      >
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-default text-default-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            0.26
          </span>
        </span>
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-default text-default-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            0.97
          </span>
        </span>
      </output>
    </div>
    <div
      class="relative flex gap-2 items-center"
      data-slot="track-wrapper"
    >
      <div
        data-slot="startContent"
      >
        <svg
          aria-hidden="true"
          class="w-8 h-4 text-foreground shrink-0 overflow-visible"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polyline
            fill="none"
            points="0,71.6 4.166666666666666,68.9375 8.333333333333332,66.275 12.5,63.6125 16.666666666666664,60.95 20.833333333333336,58.287499999999994 25,55.625 29.166666666666668,52.962500000000006 33.33333333333333,50.300000000000004 37.5,47.6375 41.66666666666667,44.974999999999994 45.83333333333333,42.3125 50,39.65 54.166666666666664,36.987500000000004 58.333333333333336,34.325 62.5,31.6625 66.66666666666666,29.000000000000004 70.83333333333334,26.3375 75,23.675 79.16666666666666,21.012500000000006 83.33333333333334,18.349999999999998 87.5,15.687500000000002 91.66666666666666,13.025000000000006 95.83333333333334,10.362499999999999 100,7.700000000000003"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            vector-effect="non-scaling-stroke"
          />
        </svg>
      </div>
      <div
        class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
        data-fill-end="false"
        data-fill-start="false"
        data-slot="track"
        data-thumb-hidden="false"
        data-vertical="false"
        style="position: relative; touch-action: none;"
      >
        <div
          class="h-full absolute bg-foreground"
          data-slot="filler"
          style="left: 26%; width: 71%;"
        />
        <div
          aria-label="Slider thumb 1"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="0"
          orientation="horizontal"
          style="position: absolute; left: 26%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_1_"
              aria-orientation="horizontal"
              aria-valuetext="0.26"
              id="react-aria-_r_1_-0"
              max="0.97"
              min="0"
              name="lightness"
              step="0.01"
              tabindex="0"
              type="range"
              value="0.26"
            />
          </div>
        </div>
        <div
          aria-label="Slider thumb 2"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="1"
          orientation="horizontal"
          style="position: absolute; left: 97%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_1_"
              aria-orientation="horizontal"
              aria-valuetext="0.97"
              id="react-aria-_r_1_-1"
              max="1"
              min="0.26"
              name="lightness"
              step="0.01"
              tabindex="0"
              type="range"
              value="0.97"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="react-aria-_r_c_"
    class="flex flex-col w-full gap-1"
    data-hover="false"
    data-orientation="horizontal"
    data-slot="base"
    id="react-aria-_r_b_"
    role="group"
  >
    <div
      class="w-full flex justify-between items-center"
      data-slot="labelWrapper"
    >
      <label
        class="flex gap-2 items-center"
        data-slot="label"
        id="react-aria-_r_c_"
      >
        <span
          class="text-base/5"
        >
          Lightness Curve
        </span>
        <button
          aria-expanded="false"
          aria-label="Description for Lightness Curve"
          class="inline-flex shrink-0 text-base"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
            />
          </svg>
        </button>
        <button
          aria-label="Reset Lightness Curve to default"
          class="text-lg transition-colors text-secondary disabled:text-foreground-500"
          disabled=""
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
            />
          </svg>
        </button>
      </label>
      <output
        aria-live="off"
        class="text-small"
        data-slot="value"
        for="react-aria-_r_c_-0"
      >
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-default text-default-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            1.3
          </span>
        </span>
      </output>
    </div>
    <div
      class="relative flex gap-2 items-center"
      data-slot="track-wrapper"
    >
      <div
        data-slot="startContent"
      >
        <svg
          aria-hidden="true"
          class="w-8 h-4 text-foreground shrink-0 overflow-visible"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polyline
            fill="none"
            points="0,95 4.166666666666666,93.5546670779959 8.333333333333332,91.44117289530234 12.5,88.97127427323336 16.666666666666664,86.23713978398202 20.833333333333336,83.28805832768414 25,80.15553600380494 29.166666666666668,76.86175151450934 33.33333333333333,73.42330720025407 37.5,69.85317511609622 41.66666666666667,66.16181688141364 45.83333333333333,62.35787782770788 50,58.44864216396941 54.166666666666664,54.440344908808065 58.333333333333336,50.33839341845257 62.5,46.14752940632131 66.66666666666666,41.87195040226664 70.83333333333334,37.51540274164286 75,33.08125406163789 79.16666666666666,28.572550722385685 83.33333333333334,23.99206392506946 87.5,19.34232721182453 91.66666666666666,14.625667295720685 95.83333333333334,9.844229659262258 100,5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            vector-effect="non-scaling-stroke"
          />
        </svg>
      </div>
      <div
        class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
        data-fill-end="false"
        data-fill-start="true"
        data-slot="track"
        data-thumb-hidden="false"
        data-vertical="false"
        style="position: relative; touch-action: none;"
      >
        <div
          class="h-full absolute bg-foreground"
          data-slot="filler"
          style="left: 0%; width: 24.489795918367342%;"
        />
        <div
          aria-label="Slider thumb 1"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="0"
          orientation="horizontal"
          style="position: absolute; left: 24.489795918367342%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_c_"
              aria-orientation="horizontal"
              aria-valuetext="1.3"
              id="react-aria-_r_c_-0"
              max="5"
              min="0.1"
              name="lightnessCurve"
              step="0.1"
              tabindex="0"
              type="range"
              value="1.3"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="react-aria-_r_k_"
    class="flex flex-col w-full gap-1"
    data-hover="false"
    data-orientation="horizontal"
    data-slot="base"
    id="react-aria-_r_j_"
    role="group"
  >
    <div
      class="w-full flex justify-between items-center"
      data-slot="labelWrapper"
    >
      <label
        class="flex gap-2 items-center"
        data-slot="label"
        id="react-aria-_r_k_"
      >
        <span
          class="text-base/5"
        >
          Chroma Curve
        </span>
        <button
          aria-expanded="false"
          aria-label="Description for Chroma Curve"
          class="inline-flex shrink-0 text-base"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
            />
          </svg>
        </button>
        <button
          aria-label="Reset Chroma Curve to default"
          class="text-lg transition-colors text-secondary disabled:text-foreground-500"
          disabled=""
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
            />
          </svg>
        </button>
      </label>
      <output
        aria-live="off"
        class="text-small"
        data-slot="value"
        for="react-aria-_r_k_-0"
      >
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-default text-default-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            0
          </span>
        </span>
      </output>
    </div>
    <div
      class="relative flex gap-2 items-center"
      data-slot="track-wrapper"
    >
      <div
        data-slot="startContent"
      >
        <svg
          aria-hidden="true"
          class="w-8 h-4 text-foreground shrink-0 overflow-visible"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polyline
            fill="none"
            points="0,5 4.166666666666666,5 8.333333333333332,5 12.5,5 16.666666666666664,5 20.833333333333336,5 25,5 29.166666666666668,5 33.33333333333333,5 37.5,5 41.66666666666667,5 45.83333333333333,5 50,5 54.166666666666664,5 58.333333333333336,5 62.5,5 66.66666666666666,5 70.83333333333334,5 75,5 79.16666666666666,5 83.33333333333334,5 87.5,5 91.66666666666666,5 95.83333333333334,5 100,5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            vector-effect="non-scaling-stroke"
          />
        </svg>
      </div>
      <div
        class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
        data-fill-end="false"
        data-fill-start="false"
        data-slot="track"
        data-thumb-hidden="false"
        data-vertical="false"
        style="position: relative; touch-action: none;"
      >
        <div
          class="h-full absolute bg-foreground"
          data-slot="filler"
          style="left: 0%; width: 0%;"
        />
        <div
          aria-label="Slider thumb 1"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="0"
          orientation="horizontal"
          style="position: absolute; left: 0%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_k_"
              aria-orientation="horizontal"
              aria-valuetext="0"
              id="react-aria-_r_k_-0"
              max="1"
              min="0"
              name="chromaCurve"
              step="0.1"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none text-default-foreground data-[hover=true]:opacity-hover px-2 min-w-16 h-8 text-small gap-2 rounded-medium bg-black/10 dark:bg-white/20"
      data-react-aria-pressable="true"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-lg"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM108.68,208H70.05L42.33,180.28a8,8,0,0,1,0-11.31L96,115.31,148.69,168Zm105-105L160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
        />
      </svg>
      Reset
    </button>
  </div>
</div>
`;

exports[`ScaleColorOptions > Render > renders with non-default options (Reset buttons enabled) 1`] = `
<div
  class="w-full flex flex-col gap-3"
  data-testid="ScaleColorOptions"
>
  <div
    aria-labelledby="react-aria-_r_1n_"
    class="flex flex-col w-full gap-1"
    data-hover="false"
    data-orientation="horizontal"
    data-slot="base"
    id="react-aria-_r_1m_"
    role="group"
  >
    <div
      class="w-full flex justify-between items-center"
      data-slot="labelWrapper"
    >
      <label
        class="flex gap-2 items-center"
        data-slot="label"
        id="react-aria-_r_1n_"
      >
        <span
          class="text-base/5"
        >
          Lightness Range
        </span>
        <button
          aria-expanded="false"
          aria-label="Description for Lightness Range"
          class="inline-flex shrink-0 text-base"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
            />
          </svg>
        </button>
        <button
          aria-label="Reset Lightness Range to default"
          class="text-lg transition-colors text-secondary disabled:text-foreground-500"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
            />
          </svg>
        </button>
      </label>
      <output
        aria-live="off"
        class="flex gap-2 text-small"
        data-slot="value"
        for="react-aria-_r_1n_-0 react-aria-_r_1n_-1"
      >
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-primary text-primary-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            0.1
          </span>
        </span>
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-primary text-primary-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            0.95
          </span>
        </span>
      </output>
    </div>
    <div
      class="relative flex gap-2 items-center"
      data-slot="track-wrapper"
    >
      <div
        data-slot="startContent"
      >
        <svg
          aria-hidden="true"
          class="w-8 h-4 text-foreground shrink-0 overflow-visible"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polyline
            fill="none"
            points="0,86 4.166666666666666,82.8125 8.333333333333332,79.625 12.5,76.4375 16.666666666666664,73.25 20.833333333333336,70.0625 25,66.875 29.166666666666668,63.6875 33.33333333333333,60.5 37.5,57.31250000000001 41.66666666666667,54.12499999999999 45.83333333333333,50.93750000000001 50,47.75 54.166666666666664,44.5625 58.333333333333336,41.375 62.5,38.1875 66.66666666666666,35 70.83333333333334,31.812500000000004 75,28.625000000000007 79.16666666666666,25.437500000000007 83.33333333333334,22.25 87.5,19.0625 91.66666666666666,15.87500000000001 95.83333333333334,12.687500000000004 100,9.500000000000004"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            vector-effect="non-scaling-stroke"
          />
        </svg>
      </div>
      <div
        class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
        data-fill-end="false"
        data-fill-start="false"
        data-slot="track"
        data-thumb-hidden="false"
        data-vertical="false"
        style="position: relative; touch-action: none;"
      >
        <div
          class="h-full absolute bg-foreground"
          data-slot="filler"
          style="left: 10%; width: 85%;"
        />
        <div
          aria-label="Slider thumb 1"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="0"
          orientation="horizontal"
          style="position: absolute; left: 10%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_1n_"
              aria-orientation="horizontal"
              aria-valuetext="0.1"
              id="react-aria-_r_1n_-0"
              max="0.95"
              min="0"
              name="lightness"
              step="0.01"
              tabindex="0"
              type="range"
              value="0.1"
            />
          </div>
        </div>
        <div
          aria-label="Slider thumb 2"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="1"
          orientation="horizontal"
          style="position: absolute; left: 95%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_1n_"
              aria-orientation="horizontal"
              aria-valuetext="0.95"
              id="react-aria-_r_1n_-1"
              max="1"
              min="0.1"
              name="lightness"
              step="0.01"
              tabindex="0"
              type="range"
              value="0.95"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="react-aria-_r_22_"
    class="flex flex-col w-full gap-1"
    data-hover="false"
    data-orientation="horizontal"
    data-slot="base"
    id="react-aria-_r_21_"
    role="group"
  >
    <div
      class="w-full flex justify-between items-center"
      data-slot="labelWrapper"
    >
      <label
        class="flex gap-2 items-center"
        data-slot="label"
        id="react-aria-_r_22_"
      >
        <span
          class="text-base/5"
        >
          Lightness Curve
        </span>
        <button
          aria-expanded="false"
          aria-label="Description for Lightness Curve"
          class="inline-flex shrink-0 text-base"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
            />
          </svg>
        </button>
        <button
          aria-label="Reset Lightness Curve to default"
          class="text-lg transition-colors text-secondary disabled:text-foreground-500"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
            />
          </svg>
        </button>
      </label>
      <output
        aria-live="off"
        class="text-small"
        data-slot="value"
        for="react-aria-_r_22_-0"
      >
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-primary text-primary-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            2
          </span>
        </span>
      </output>
    </div>
    <div
      class="relative flex gap-2 items-center"
      data-slot="track-wrapper"
    >
      <div
        data-slot="startContent"
      >
        <svg
          aria-hidden="true"
          class="w-8 h-4 text-foreground shrink-0 overflow-visible"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polyline
            fill="none"
            points="0,95 4.166666666666666,94.84375 8.333333333333332,94.375 12.5,93.59375 16.666666666666664,92.5 20.833333333333336,91.09375 25,89.375 29.166666666666668,87.34375 33.33333333333333,85 37.5,82.34375 41.66666666666667,79.375 45.83333333333333,76.09375 50,72.5 54.166666666666664,68.59375 58.333333333333336,64.37499999999999 62.5,59.84375 66.66666666666666,55 70.83333333333334,49.84374999999999 75,44.375 79.16666666666666,38.59375000000001 83.33333333333334,32.49999999999999 87.5,26.09375 91.66666666666666,19.375000000000007 95.83333333333334,12.34374999999999 100,5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            vector-effect="non-scaling-stroke"
          />
        </svg>
      </div>
      <div
        class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
        data-fill-end="false"
        data-fill-start="true"
        data-slot="track"
        data-thumb-hidden="false"
        data-vertical="false"
        style="position: relative; touch-action: none;"
      >
        <div
          class="h-full absolute bg-foreground"
          data-slot="filler"
          style="left: 0%; width: 38.77551020408163%;"
        />
        <div
          aria-label="Slider thumb 1"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="0"
          orientation="horizontal"
          style="position: absolute; left: 38.77551020408163%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_22_"
              aria-orientation="horizontal"
              aria-valuetext="2"
              id="react-aria-_r_22_-0"
              max="5"
              min="0.1"
              name="lightnessCurve"
              step="0.1"
              tabindex="0"
              type="range"
              value="2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="react-aria-_r_2a_"
    class="flex flex-col w-full gap-1"
    data-hover="false"
    data-orientation="horizontal"
    data-slot="base"
    id="react-aria-_r_29_"
    role="group"
  >
    <div
      class="w-full flex justify-between items-center"
      data-slot="labelWrapper"
    >
      <label
        class="flex gap-2 items-center"
        data-slot="label"
        id="react-aria-_r_2a_"
      >
        <span
          class="text-base/5"
        >
          Chroma Curve
        </span>
        <button
          aria-expanded="false"
          aria-label="Description for Chroma Curve"
          class="inline-flex shrink-0 text-base"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
            />
          </svg>
        </button>
        <button
          aria-label="Reset Chroma Curve to default"
          class="text-lg transition-colors text-secondary disabled:text-foreground-500"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
            />
          </svg>
        </button>
      </label>
      <output
        aria-live="off"
        class="text-small"
        data-slot="value"
        for="react-aria-_r_2a_-0"
      >
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-primary text-primary-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            0.5
          </span>
        </span>
      </output>
    </div>
    <div
      class="relative flex gap-2 items-center"
      data-slot="track-wrapper"
    >
      <div
        data-slot="startContent"
      >
        <svg
          aria-hidden="true"
          class="w-8 h-4 text-foreground shrink-0 overflow-visible"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polyline
            fill="none"
            points="0,50 4.166666666666666,42.81249999999999 8.333333333333332,36.25 12.5,30.3125 16.666666666666664,25 20.833333333333336,20.312499999999996 25,16.25 29.166666666666668,12.812500000000002 33.33333333333333,10.000000000000002 37.5,7.8125 41.66666666666667,6.250000000000005 45.83333333333333,5.312499999999989 50,5 54.166666666666664,5.312499999999999 58.333333333333336,6.249999999999996 62.5,7.8125 66.66666666666666,10.000000000000002 70.83333333333334,12.812500000000002 75,16.25 79.16666666666666,20.312499999999996 83.33333333333334,25.000000000000007 87.5,30.3125 91.66666666666666,36.249999999999986 95.83333333333334,42.81250000000001 100,50"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            vector-effect="non-scaling-stroke"
          />
        </svg>
      </div>
      <div
        class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
        data-fill-end="false"
        data-fill-start="true"
        data-slot="track"
        data-thumb-hidden="false"
        data-vertical="false"
        style="position: relative; touch-action: none;"
      >
        <div
          class="h-full absolute bg-foreground"
          data-slot="filler"
          style="left: 0%; width: 50%;"
        />
        <div
          aria-label="Slider thumb 1"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="0"
          orientation="horizontal"
          style="position: absolute; left: 50%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_2a_"
              aria-orientation="horizontal"
              aria-valuetext="0.5"
              id="react-aria-_r_2a_-0"
              max="1"
              min="0"
              name="chromaCurve"
              step="0.1"
              tabindex="0"
              type="range"
              value="0.5"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none text-default-foreground data-[hover=true]:opacity-hover px-2 min-w-16 h-8 text-small gap-2 rounded-medium bg-black/10 dark:bg-white/20"
      data-react-aria-pressable="true"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-lg"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM108.68,208H70.05L42.33,180.28a8,8,0,0,1,0-11.31L96,115.31,148.69,168Zm105-105L160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
        />
      </svg>
      Reset
    </button>
  </div>
</div>
`;

exports[`ScaleColorOptions > Render > renders with title, description, isChromatic and useLightTheme 1`] = `
<div
  class="w-full flex flex-col gap-3"
  data-testid="ScaleColorOptions"
>
  <h3
    class="font-semibold text-lg"
  >
    Options for Primary
  </h3>
  <div
    class="text-sm"
  >
    <p>
      Per-color overrides
    </p>
  </div>
  <div
    aria-labelledby="react-aria-_r_s_"
    class="flex flex-col w-full gap-1"
    data-hover="false"
    data-orientation="horizontal"
    data-slot="base"
    id="react-aria-_r_r_"
    role="group"
  >
    <div
      class="w-full flex justify-between items-center"
      data-slot="labelWrapper"
    >
      <label
        class="flex gap-2 items-center"
        data-slot="label"
        id="react-aria-_r_s_"
      >
        <span
          class="text-base/5"
        >
          Lightness Range
        </span>
        <button
          aria-expanded="false"
          aria-label="Description for Lightness Range"
          class="inline-flex shrink-0 text-base"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
            />
          </svg>
        </button>
        <button
          aria-label="Reset Lightness Range to default"
          class="text-lg transition-colors text-secondary disabled:text-foreground-500"
          disabled=""
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
            />
          </svg>
        </button>
      </label>
      <output
        aria-live="off"
        class="flex gap-2 text-small"
        data-slot="value"
        for="react-aria-_r_s_-0 react-aria-_r_s_-1"
      >
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-default text-default-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            0.26
          </span>
        </span>
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-default text-default-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            0.97
          </span>
        </span>
      </output>
    </div>
    <div
      class="relative flex gap-2 items-center"
      data-slot="track-wrapper"
    >
      <div
        data-slot="startContent"
      >
        <svg
          aria-hidden="true"
          class="w-8 h-4 text-foreground shrink-0 overflow-visible"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polyline
            fill="none"
            points="0,71.6 4.166666666666666,68.9375 8.333333333333332,66.275 12.5,63.6125 16.666666666666664,60.95 20.833333333333336,58.287499999999994 25,55.625 29.166666666666668,52.962500000000006 33.33333333333333,50.300000000000004 37.5,47.6375 41.66666666666667,44.974999999999994 45.83333333333333,42.3125 50,39.65 54.166666666666664,36.987500000000004 58.333333333333336,34.325 62.5,31.6625 66.66666666666666,29.000000000000004 70.83333333333334,26.3375 75,23.675 79.16666666666666,21.012500000000006 83.33333333333334,18.349999999999998 87.5,15.687500000000002 91.66666666666666,13.025000000000006 95.83333333333334,10.362499999999999 100,7.700000000000003"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            vector-effect="non-scaling-stroke"
          />
        </svg>
      </div>
      <div
        class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
        data-fill-end="false"
        data-fill-start="false"
        data-slot="track"
        data-thumb-hidden="false"
        data-vertical="false"
        style="position: relative; touch-action: none;"
      >
        <div
          class="h-full absolute bg-foreground"
          data-slot="filler"
          style="left: 26%; width: 71%;"
        />
        <div
          aria-label="Slider thumb 1"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="0"
          orientation="horizontal"
          style="position: absolute; left: 26%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_s_"
              aria-orientation="horizontal"
              aria-valuetext="0.26"
              id="react-aria-_r_s_-0"
              max="0.97"
              min="0"
              name="lightness"
              step="0.01"
              tabindex="0"
              type="range"
              value="0.26"
            />
          </div>
        </div>
        <div
          aria-label="Slider thumb 2"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="1"
          orientation="horizontal"
          style="position: absolute; left: 97%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_s_"
              aria-orientation="horizontal"
              aria-valuetext="0.97"
              id="react-aria-_r_s_-1"
              max="1"
              min="0.26"
              name="lightness"
              step="0.01"
              tabindex="0"
              type="range"
              value="0.97"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="react-aria-_r_17_"
    class="flex flex-col w-full gap-1"
    data-hover="false"
    data-orientation="horizontal"
    data-slot="base"
    id="react-aria-_r_16_"
    role="group"
  >
    <div
      class="w-full flex justify-between items-center"
      data-slot="labelWrapper"
    >
      <label
        class="flex gap-2 items-center"
        data-slot="label"
        id="react-aria-_r_17_"
      >
        <span
          class="text-base/5"
        >
          Lightness Curve
        </span>
        <button
          aria-expanded="false"
          aria-label="Description for Lightness Curve"
          class="inline-flex shrink-0 text-base"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
            />
          </svg>
        </button>
        <button
          aria-label="Reset Lightness Curve to default"
          class="text-lg transition-colors text-secondary disabled:text-foreground-500"
          disabled=""
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
            />
          </svg>
        </button>
      </label>
      <output
        aria-live="off"
        class="text-small"
        data-slot="value"
        for="react-aria-_r_17_-0"
      >
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-default text-default-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            1.3
          </span>
        </span>
      </output>
    </div>
    <div
      class="relative flex gap-2 items-center"
      data-slot="track-wrapper"
    >
      <div
        data-slot="startContent"
      >
        <svg
          aria-hidden="true"
          class="w-8 h-4 text-foreground shrink-0 overflow-visible"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polyline
            fill="none"
            points="0,95 4.166666666666666,93.5546670779959 8.333333333333332,91.44117289530234 12.5,88.97127427323336 16.666666666666664,86.23713978398202 20.833333333333336,83.28805832768414 25,80.15553600380494 29.166666666666668,76.86175151450934 33.33333333333333,73.42330720025407 37.5,69.85317511609622 41.66666666666667,66.16181688141364 45.83333333333333,62.35787782770788 50,58.44864216396941 54.166666666666664,54.440344908808065 58.333333333333336,50.33839341845257 62.5,46.14752940632131 66.66666666666666,41.87195040226664 70.83333333333334,37.51540274164286 75,33.08125406163789 79.16666666666666,28.572550722385685 83.33333333333334,23.99206392506946 87.5,19.34232721182453 91.66666666666666,14.625667295720685 95.83333333333334,9.844229659262258 100,5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            vector-effect="non-scaling-stroke"
          />
        </svg>
      </div>
      <div
        class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
        data-fill-end="false"
        data-fill-start="true"
        data-slot="track"
        data-thumb-hidden="false"
        data-vertical="false"
        style="position: relative; touch-action: none;"
      >
        <div
          class="h-full absolute bg-foreground"
          data-slot="filler"
          style="left: 0%; width: 24.489795918367342%;"
        />
        <div
          aria-label="Slider thumb 1"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="0"
          orientation="horizontal"
          style="position: absolute; left: 24.489795918367342%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_17_"
              aria-orientation="horizontal"
              aria-valuetext="1.3"
              id="react-aria-_r_17_-0"
              max="5"
              min="0.1"
              name="lightnessCurve"
              step="0.1"
              tabindex="0"
              type="range"
              value="1.3"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="react-aria-_r_1f_"
    class="flex flex-col w-full gap-1"
    data-hover="false"
    data-orientation="horizontal"
    data-slot="base"
    id="react-aria-_r_1e_"
    role="group"
  >
    <div
      class="w-full flex justify-between items-center"
      data-slot="labelWrapper"
    >
      <label
        class="flex gap-2 items-center"
        data-slot="label"
        id="react-aria-_r_1f_"
      >
        <span
          class="text-base/5"
        >
          Chroma Curve
        </span>
        <button
          aria-expanded="false"
          aria-label="Description for Chroma Curve"
          class="inline-flex shrink-0 text-base"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
            />
          </svg>
        </button>
        <button
          aria-label="Reset Chroma Curve to default"
          class="text-lg transition-colors text-secondary disabled:text-foreground-500"
          disabled=""
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
            />
          </svg>
        </button>
      </label>
      <output
        aria-live="off"
        class="text-small"
        data-slot="value"
        for="react-aria-_r_1f_-0"
      >
        <span
          class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 text-tiny rounded-full bg-default text-default-foreground h-5 w-12 max-w-none text-center"
        >
          <span
            class="flex-1 text-inherit font-normal px-1"
          >
            0
          </span>
        </span>
      </output>
    </div>
    <div
      class="relative flex gap-2 items-center"
      data-slot="track-wrapper"
    >
      <div
        data-slot="startContent"
      >
        <svg
          aria-hidden="true"
          class="w-8 h-4 text-foreground shrink-0 overflow-visible"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polyline
            fill="none"
            points="0,5 4.166666666666666,5 8.333333333333332,5 12.5,5 16.666666666666664,5 20.833333333333336,5 25,5 29.166666666666668,5 33.33333333333333,5 37.5,5 41.66666666666667,5 45.83333333333333,5 50,5 54.166666666666664,5 58.333333333333336,5 62.5,5 66.66666666666666,5 70.83333333333334,5 75,5 79.16666666666666,5 83.33333333333334,5 87.5,5 91.66666666666666,5 95.83333333333334,5 100,5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            vector-effect="non-scaling-stroke"
          />
        </svg>
      </div>
      <div
        class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
        data-fill-end="false"
        data-fill-start="false"
        data-slot="track"
        data-thumb-hidden="false"
        data-vertical="false"
        style="position: relative; touch-action: none;"
      >
        <div
          class="h-full absolute bg-foreground"
          data-slot="filler"
          style="left: 0%; width: 0%;"
        />
        <div
          aria-label="Slider thumb 1"
          class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
          data-react-aria-pressable="true"
          data-slot="thumb"
          index="0"
          orientation="horizontal"
          style="position: absolute; left: 0%; transform: translate(-50%, -50%); touch-action: none;"
        >
          <div
            style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              aria-describedby=""
              aria-details=""
              aria-labelledby="react-aria-_r_1f_"
              aria-orientation="horizontal"
              aria-valuetext="0"
              id="react-aria-_r_1f_-0"
              max="1"
              min="0"
              name="chromaCurve"
              step="0.1"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none text-default-foreground data-[hover=true]:opacity-hover px-2 min-w-16 h-8 text-small gap-2 rounded-medium bg-black/10"
      data-react-aria-pressable="true"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-lg"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM108.68,208H70.05L42.33,180.28a8,8,0,0,1,0-11.31L96,115.31,148.69,168Zm105-105L160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
        />
      </svg>
      Reset
    </button>
  </div>
</div>
`;
